# RoboCar

./: .gitignore  CMakeLists.txt  README.MD  STM32README.MD  build.sh
conf/: car.conf
config_model/: CMakeLists.txt  conf.cpp
cv_model/: CMakeLists.txt  CvText.cpp  detcetModel.cpp  imageController.cpp
include/: CognitivDetection.h  CurlModel.h  CvText.h  EegData.h  EmoStateAffectiv.h  EmoStateDLL.h  EmotivCloudClient.h  HTTP.h  USBIOModel.h  applog.h  conf.h  config.h  detcetModel.h  edk.h  edkErrorCode.h  imageController.h  mainWindow.h  ringThread.h  subWindow.h  videoThread.h  weatherApi.h
include/json/: config.h
lib/: libedk.so.3  libedk.so.3.3
lib_json/: CMakeLists.txt  json_reader.cpp
log_model/: CMakeLists.txt  applog.cpp
main/: CMakeLists.txt  index.cpp  main.cpp
network_model/: USBIOModel.cpp
realsense_model/: CMakeLists.txt
ring_model/: CMakeLists.txt  ekhoModel.cpp  ekhoModel.h  voiceRecard.cpp  voiceRecard.h
thread_model/: CMakeLists.txt  ringThread.cpp  videoThread.cpp
weather_model/: CMakeLists.txt  CurlModel.cpp  HTTP.cpp  weatherApi.cpp
window_model/: CMakeLists.txt  mainWindow.cpp  subWindow.cpp
